# mina

./: Makefile  flake.nix
nix/: ocaml.nix  overlay.nix
scripts/: dune_wrapper
scripts/check_opam_switch/: check_opam_switch.ml  check_opam_switch.sh  dune  switch_update_time.sh
src/: opam.export
src/app/cli/src/init/: dune
src/app/rosetta/lib/: dune
src/lib/crypto/kimchi_bindings/stubs/binding_generation/src/: main.rs
src/lib/crypto/kimchi_bindings/stubs/src/arkworks/: bigint_256.rs  fp256.rs  pasta_fp.rs  pasta_fq.rs
src/lib/integration_test_cloud_engine/: dune
src/lib/snarky_js_bindings/lib/: snarky_js_bindings_lib.ml
